test/should_pass/basic_064.grg
actions basic_064 using basic_model_002;

rule r {
	pattern {
		x : CC;
	}
	replace {
		eval {
			x.ic = 42;
		}
	}
}

