test/should_fail/enum_010.grg
actions enum_010.grg using enum_model_004;

rule r {
	pattern {
	}
	replace {
	}
}



